# AndroidCmdToolsClient

./: .gitignore  .gitmodules  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/plans/: 2026-03-02-desktop-client-design.md  2026-03-02-implementation-plan.md  2026-03-02-interactive-ui-refactor.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: device.rs  environment.rs  mod.rs  shell_exec.rs
src-tauri/src/models/: device.rs
src/components/common/: EnvIndicator.tsx  FilePickerInput.tsx  ResizeHandle.tsx  SearchDialog.tsx
src/components/device/: DeviceSelector.tsx
src/components/layout/: AppLayout.tsx  Sidebar.tsx  TerminalPanel.tsx  TitleBar.tsx  Workspace.tsx
src/components/tools/: ToolForm.tsx
src/hooks/: useDeviceDetection.ts  useDragDrop.ts  useEnvironmentCheck.ts  useShellExecution.ts
src/lib/: toolRegistry.ts
src/stores/: deviceStore.ts  historyStore.ts  terminalStore.ts
