[package]
name = "android-cmd-tools-client"
version = "0.1.0"
description = "Android 命令行工具集桌面客户端"
authors = ["yancey721"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "android_cmd_tools_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-shell = "2.3.5"
tauri-plugin-fs = "2.4.5"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

